solarsystem generator, prefab update
+ player controller ver2

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/Hyperspace PT/[Ll]ibrary/
+/Hyperspace PT/[Tt]emp/
+/Hyperspace PT/[Oo]bj/
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
@@ -24,38 +27,3 @@ ExportedObj/
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
-Hyperspace PT/Library/
-Hyperspace PT/Temp/ProcessJobs/e9a6970f79cd12d8b075e7d72f1b07cb.bakert
-Hyperspace PT/Temp/UnityLockfile
-Hyperspace PT/Temp/UnityTempFile-0151b103d42aebc4aaee802fe8ff2517
-Hyperspace PT/Temp/UnityTempFile-038d238973a91544db593f5d4ba3bfd4
-Hyperspace PT/Temp/UnityTempFile-11b73bf0a9cb7dc4bad8ac087f98cb0b
-Hyperspace PT/Temp/UnityTempFile-4248c537e414cd24bb53ea6c96487d11
-Hyperspace PT/Temp/UnityTempFile-52ac67bcbc14db44b96af17b6b6ba268
-Hyperspace PT/Temp/UnityTempFile-6092e4f6f7ac39f4e9bdc7c3cf025ce4
-Hyperspace PT/Temp/UnityTempFile-985b6c6257777874abb2d9bbba288e27
-Hyperspace PT/Temp/UnityTempFile-9c57f9d5c1fc0de4e9d91d39efa4b45b
-Hyperspace PT/Temp/UnityTempFile-9ef1ac59f7567e040a12faf3ee16707f
-Hyperspace PT/Temp/UnityTempFile-a05501e5058cde4408f0b12c29748cab
-Hyperspace PT/Temp/UnityTempFile-b38e921041a726c4780a857299d6b98a
-Hyperspace PT/Temp/UnityTempFile-c44148cf6277a9d448a431bac33d1fcf
-Hyperspace PT/Temp/UnityTempFile-cf2768c661a12ba419578ff0722e1118
-Hyperspace PT/Temp/UnityTempFile-d09c88d5eff93af4bb5137fbcf0f8543
-Hyperspace PT/Temp/UnityTempFile-d6bca567a55cf6d439ea1f415daac1e5
-Hyperspace PT/Temp/UnityVS_bin/Debug/Assembly-CSharp.dll
-Hyperspace PT/Temp/UnityVS_bin/Debug/Assembly-CSharp.pdb
-Hyperspace PT/Temp/UnityVS_bin/Debug/UnityEditor.dll
-Hyperspace PT/Temp/UnityVS_bin/Debug/UnityEditor.xml
-Hyperspace PT/Temp/UnityVS_bin/Debug/UnityEngine.Networking.dll
-Hyperspace PT/Temp/UnityVS_bin/Debug/UnityEngine.Networking.xml
-Hyperspace PT/Temp/UnityVS_bin/Debug/UnityEngine.UI.dll
-Hyperspace PT/Temp/UnityVS_bin/Debug/UnityEngine.UI.xml
-Hyperspace PT/Temp/UnityVS_bin/Debug/UnityEngine.dll
-Hyperspace PT/Temp/UnityVS_bin/Debug/UnityEngine.xml
-Hyperspace PT/Temp/UnityVS_obj/Debug/Assembly-CSharp.dll
-Hyperspace PT/Temp/UnityVS_obj/Debug/Assembly-CSharp.pdb
-Hyperspace PT/Temp/UnityVS_obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
-Hyperspace PT/Temp/UnityVS_obj/Debug/Hyperspace PT.CSharp.csproj.FileListAbsolute.txt
-Hyperspace PT/Temp/UnityVS_obj/Debug/Hyperspace PT.CSharp.csprojResolveAssemblyReference.cache
-Hyperspace PT/Temp/UnityVS_obj/Debug/build.force
-Hyperspace PT/Temp/__Backupscenes/0.backup
